--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+header img {
+    position: fixed;
+    top: 50px;
+    right: 320px;
+}
+
 body {
     font-family: Inter, sans-serif;
     background-color: #f3f4f6;
